@@ -1,4 +1,10 @@
 2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Tests.swg: #include "glib-util.h"
+	* client-src/selfcheck.c, common-src/ammessage.c,
+	  recover-src/extract_list.c, server-src/driver.c: Fix bug found by
+	  coverity.
+
+2015-06-01  Jean-Louis Martineau <martineau@zmanda.com>
 	* ndmp-src/ndmpconnobj.c: #include "glib-util.h",
 	* ndmp-src/ndmpconnobj.c (ndmp_connection_mover_connect):  return a
 	  gboolean.
